--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri Oct 06 12:54:19 EDT 2023
-sdk.dir=C\:\\Users\\greg_\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/manavkhosla/Library/Android/sdk
