--- a/local.properties
+++ b/local.properties
@@ -4,9 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Oct 06 12:54:19 EDT 2023
-<<<<<<< Updated upstream
-sdk.dir=C\:\\Users\\greg_\\AppData\\Local\\Android\\Sdk
-=======
-#sdk.dir=C:\\Users\\resli\\AppData\\Local\\Android\\Sdk
->>>>>>> Stashed changes
+#Tue Nov 14 18:21:32 EST 2023
+
+sdk.dir=/Users/manavkhosla/Library/Android/sdk
+>>>>>>>=Stashed changes
+<<<<<<<=Updated upstream
