--- a/local.properties
+++ b/local.properties
@@ -4,8 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Oct 06 12:54:19 EDT 2023
-<<<<<<< Updated upstream
-sdk.dir=/Users/manavkhosla/Library/Android/sdk
-
-#sdk.dir=C:\\Users\\resli\\AppData\\Local\\Android\\Sdk
+#Wed Nov 29 18:14:46 EST 2023
+<<<<<<<=Updated upstream
+sdk.dir=C\:\\Users\\greg_\\AppData\\Local\\Android\\Sdk
