pre set arm and flipper positions fixed bug with flipprer code exteded poker fix flipper code

--- a/local.properties
+++ b/local.properties
@@ -6,4 +6,5 @@
 # header note.
 #Wed Nov 29 18:14:46 EST 2023
 <<<<<<<=Updated upstream
-sdk.dir=C\:\\Users\\greg_\\AppData\\Local\\Android\\Sdk
+#sdk.dir=C\:\\Users\\greg_\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\ixpra\\AppData\\Local\\Android\\Sdk
